@@ -21,6 +21,38 @@ package|;
 end_package
 
 begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|DFSConfigKeys
+operator|.
+name|DFS_NFS_KEYTAB_FILE_KEY
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|DFSConfigKeys
+operator|.
+name|DFS_NFS_USER_NAME_KEY
+import|;
+end_import
+
+begin_import
 import|import
 name|java
 operator|.
@@ -406,6 +438,34 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|SecurityUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|UserGroupInformation
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|jboss
 operator|.
 name|netty
@@ -651,6 +711,24 @@ argument_list|<
 name|MountEntry
 argument_list|>
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|UserGroupInformation
+operator|.
+name|setConfiguration
+argument_list|(
+name|config
+argument_list|)
+expr_stmt|;
+name|SecurityUtil
+operator|.
+name|login
+argument_list|(
+name|config
+argument_list|,
+name|DFS_NFS_KEYTAB_FILE_KEY
+argument_list|,
+name|DFS_NFS_USER_NAME_KEY
 argument_list|)
 expr_stmt|;
 name|this
