@@ -1682,6 +1682,34 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|SecurityUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|UserGroupInformation
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|jboss
 operator|.
 name|netty
@@ -1745,6 +1773,38 @@ operator|.
 name|annotations
 operator|.
 name|VisibleForTesting
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|DFSConfigKeys
+operator|.
+name|DFS_NFS_KEYTAB_FILE_KEY
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|DFSConfigKeys
+operator|.
+name|DFS_NFS_USER_NAME_KEY
 import|;
 end_import
 
@@ -2091,6 +2151,24 @@ operator|.
 name|ENABLE_FILE_DUMP_DEFAULT
 argument_list|)
 decl_stmt|;
+name|UserGroupInformation
+operator|.
+name|setConfiguration
+argument_list|(
+name|config
+argument_list|)
+expr_stmt|;
+name|SecurityUtil
+operator|.
+name|login
+argument_list|(
+name|config
+argument_list|,
+name|DFS_NFS_KEYTAB_FILE_KEY
+argument_list|,
+name|DFS_NFS_USER_NAME_KEY
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 operator|!
