@@ -24,6 +24,24 @@ begin_import
 import|import static
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|UserGroupInformation
+operator|.
+name|AuthenticationMethod
+operator|.
+name|KERBEROS
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
 name|junit
 operator|.
 name|Assert
@@ -290,6 +308,122 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testGetUserGroupInformationSecure ()
+specifier|public
+name|void
+name|testGetUserGroupInformationSecure
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|String
+name|userName
+init|=
+literal|"user1"
+decl_stmt|;
+name|String
+name|currentUser
+init|=
+literal|"test-user"
+decl_stmt|;
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+name|UserGroupInformation
+name|currentUserUgi
+init|=
+name|UserGroupInformation
+operator|.
+name|createRemoteUser
+argument_list|(
+name|currentUser
+argument_list|)
+decl_stmt|;
+name|currentUserUgi
+operator|.
+name|setAuthenticationMethod
+argument_list|(
+name|KERBEROS
+argument_list|)
+expr_stmt|;
+name|UserGroupInformation
+operator|.
+name|setLoginUser
+argument_list|(
+name|currentUserUgi
+argument_list|)
+expr_stmt|;
+name|DFSClientCache
+name|cache
+init|=
+operator|new
+name|DFSClientCache
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|UserGroupInformation
+name|ugiResult
+init|=
+name|cache
+operator|.
+name|getUserGroupInformation
+argument_list|(
+name|userName
+argument_list|,
+name|currentUserUgi
+argument_list|)
+decl_stmt|;
+name|assertThat
+argument_list|(
+name|ugiResult
+operator|.
+name|getUserName
+argument_list|()
+argument_list|,
+name|is
+argument_list|(
+name|userName
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertThat
+argument_list|(
+name|ugiResult
+operator|.
+name|getRealUser
+argument_list|()
+argument_list|,
+name|is
+argument_list|(
+name|currentUserUgi
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertThat
+argument_list|(
+name|ugiResult
+operator|.
+name|getAuthenticationMethod
+argument_list|()
+argument_list|,
+name|is
+argument_list|(
+name|UserGroupInformation
+operator|.
+name|AuthenticationMethod
+operator|.
+name|PROXY
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testGetUserGroupInformation ()
 specifier|public
 name|void
@@ -324,17 +458,6 @@ literal|0
 index|]
 argument_list|)
 decl_stmt|;
-name|currentUserUgi
-operator|.
-name|setAuthenticationMethod
-argument_list|(
-name|UserGroupInformation
-operator|.
-name|AuthenticationMethod
-operator|.
-name|KERBEROS
-argument_list|)
-expr_stmt|;
 name|Configuration
 name|conf
 init|=
